<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="hello">Hello World, FunFunActivity!</string>
    <string name="app_name">Flight Planning Calculator</string>
    <string name="DefaultValue">0</string>
    <string name="mainpageTitle">Team PFM - FPC</string>
    <string name="mainpageConversion">Conversions</string>
    <string name="mainpageCalculations">Calculations</string>
    <string name="mainpageAddDelete">Add/Delete</string>
    <string name="mainpageDocuments">Documents</string>
    <string name="adddeletepageAdd">Add</string>
    <string name="adddeletepageDelete">Delete</string>
    <string name="settingspageThemes">Themes</string>
    <string name="settingspageAbout">About</string>
    <string name="conversionspageSpinnerText">PLEASE SELECT THE TYPE OF CONVERSIONS</string>
    <string name="windspeeddirectionGroundSpeed">Ground Speed</string>
	<string name="windspeeddirectionGroundSpeedInput">Input</string>
	 <string name="windspeeddirectionTrueSpeed">True Speed</string>
	<string name="windspeeddirectionTrueSpeedInput">Input</string>
	 <string name="windspeeddirectionCourse">Course</string>
	<string name="windspeeddirectionCourseInput">Input</string>
	 <string name="windspeeddirectionHeading">Heading</string>
	<string name="windspeeddirectionHeadingInput">Input</string>
	 <string name="windspeeddirectionCalculate">Calculate</string>
	 <string name="windspeeddirectionWindSpeed">Wind Speed</string>
	<string name="windspeeddirectionWindSpeedOutput">Output</string>
  	<string name="windspeeddirectionWindDirection">Wind Direction</string>
	<string name="windspeeddirectionWindDirectionOutput">Output</string>
	<string name="settingspageSpinnerPrompt">PLEASE SELECT AN OPTION FOR THE THEME</string>
	<string name="conversionspageInput">Input</string>
	<string name="conversionspageOutput">Output</string>
	<string name="densityaltitudepagePressureAltitude">Pressure Altitude</string>
	<string name="densityaltitudepageOutsideAirTemp">Outside Air Temperature</string>
	<string name="densityaltitudepageOutsideAirTempInput">Input</string>
	<string name="densityaltitudepagePressureAltitudeInput">Input</string>
	<string name="densityaltitudepageDensityAltitude">Density Altitude</string>
	<string name="densityaltitudepageDensityAltitudeOutput">Output</string>
	<string name="conversionspageCalculate">Calculate</string>
	<string name="densityaltitudepageCalculate">Calculate</string>
	<string name="densityaltitudeDensityAltitude">Density Altitude</string>
	<string name="densityaltitudeDensityAltitudeOutput">Output</string>
	<string name="flyingdistancecourseDepartingAirport">Departing Airport</string>
	<string name="flyingdistancecourseDestinationAirport">Destination Airport</string>
	<string name="flyingdistancecourseCalculate">Calculate</string>
	<string name="flyingdistancecourseDistanceUnit">Distance Unit</string>
	<string name="flyingdistancecourseFlyingDistance">Flying Distance</string>
	<string name="flyingdistancecourseCourse">Course</string>
	<string name="flyingdistancecourseFlyingDistanceOutput">Output</string>
	<string name="flyingdistancecourseCourseOutput">Output</string>
	<string name="settings">settings</string><string name="deletepageText">PLEASE SELECT THE ENTER TO DELETE</string>
	
	
	<string name="runway_direction_string">Runway Direction</string>
    <string name="wind_direction_string">Wind Direction</string>
    <string name="wind_speed_string">Wind Speed</string>
    <string name="crosswind_string">Crosswind</string>
    <string name="headwind_string">Headwind</string>
    <string name="calculate_string">CALCULATE</string>
    <string name="airport_id_string">Airport ID</string>
    <string name="latitude_string">Latitude</string>
    <string name="longitude_string">Longitude</string>
    <string name="add_airport_string">ADD AIRPORT</string>
    <string name="heading_gp_wca_string">Heading, Ground Speed, and Wind Correction Angle</string>
    <string name="windspeed_winddirection_string">Wind Speed and Wind Direction</string>
    <string name="density_altitude_string">Density Altitude</string>
    <string name="true_airspeed_string">True Airspeed</string>
    <string name="runway_winds_string">Runway Winds</string>
    <string name="distance_course_between_airports_string">Flying Distance and Course Between Airports</string>
    <string name="course_string">Course</string>
    <string name="heading_string">Heading</string>
    <string name="ground_speed_string">Ground Speed</string>
    <string name="wind_correction_angle_string">Wind Corr. Angle</string>
    <string name="indicated_airspeed_string">Indicated Airspeed</string>
    <string-array name="speedValues">
        <item>MPH</item>
        <item>Knots</item>
        <item>KPH</item>
    </string-array><string name="mean_sea_level_altitude_string">Mean Sea Level Altitude</string>
    
    <string name="speedUnits">Speed Units</string>
    <string name="zero">0</string>
    <string name="delete">Delete</string>
    <string name="welcomeText">Please select if you want to use the default airport list or your own:</string>
    <string name="defaultAirportList">Default Airport List</string>
    <string name="userList">Custom Airport List</string>
    <string-array name="distance_units">
        <item>SM</item>
        <item>KM</item>
        <item>NM</item>
    </string-array>
    <string-array name="conversionvalues">
        <item >Speed</item>
        <item >Distance</item>
        <item >Temperature</item>
        <item >Pressure</item>
        <item >Angle</item>
    </string-array>
    <string-array name="tempvalues">
        <item >Cel</item>
        <item >Fah</item>
        <item >Rank</item>
        <item >Kev</item>
    </string-array>
    <string-array name="pressurevalues">
        <item >Mercury</item>
        <item >Millibars</item>
    </string-array>
    <string-array name="angelsvalues">
        <item >Rad</item>
        <item >DMS</item>
    </string-array>
    <string name="InputUnit">Input Unit</string>
    <string name="OutputUnit">Output Unit</string>
	
	
</resources>