<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    >

    <Button
        android:id="@+id/heading_gs_wca_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/heading_gp_wca_string" 
        android:layout_marginBottom="20dp"/>
    
    <Button
        android:id="@+id/windspeed_winddirection_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/windspeed_winddirection_string" 
        android:layout_marginBottom="20dp"/>
    
    <Button
        android:id="@+id/true_airspeed_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/true_airspeed_string" 
        android:layout_marginBottom="20dp"/>
    
    <Button
        android:id="@+id/density_altitude_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/density_altitude_string" 
        android:layout_marginBottom="20dp"/>
    
    <Button
        android:id="@+id/runway_winds_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/runway_winds_string" 
        android:layout_marginBottom="20dp"/>
    
    <Button
        android:id="@+id/distance_course_between_airports_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textSize="20dp" 
        android:text="@string/distance_course_between_airports_string" 
        android:layout_marginBottom="20dp"/>
    
    
</TableLayout>