<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

       <TextView
                android:id="@+id/mainPageTitlet"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mainpageTitle"
                android:textSize="25dp"
                android:textStyle="bold" 
                android:layout_margin="15dp" android:layout_gravity="center"/>/>
   
    <Button
        android:id="@+id/mainPageConversions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainpageConversion"
		android:textStyle="bold"
		android:textSize="25dp"
android:layout_gravity="center" android:layout_margin="15dp"/>
    <Button
        android:id="@+id/mainPageCalculations"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainpageCalculations"
		android:textStyle="bold"
		android:textSize="25dp"
android:layout_gravity="center" android:layout_margin="15dp"/>

    <Button
        android:id="@+id/mainPageAddDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/mainpageAddDelete"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mainPageDocuments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/mainpageDocuments"
        android:textSize="25dp"
        android:textStyle="bold" />

</LinearLayout>