<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/welcomeText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/defaultListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:onClick = "defaultList"
        android:text="@string/defaultAirportList" />

    <Button
        android:id="@+id/userListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/defaultListButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:onClick="customList"
        android:text="@string/userList" />

</RelativeLayout>