<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


    
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/conversionspageSpinnerPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversionspageSpinnerText"
                android:textSize="16dp"
                android:textStyle="bold" android:layout_margin="15dp"/>
        </TableRow>
    
       <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="15dp">

           <Spinner
               android:id="@+id/conversionspageTypeofConversionsSpinner"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"/>

        </TableRow>

     
        
       <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp">
           
           <EditText
           android:id="@+id/conversionspageInput"
           android:layout_width="120dp"
           android:layout_height="wrap_content" android:text="@string/conversionspageInput">

           <requestFocus />
       	   </EditText>
       	   
             <Spinner
           android:id="@+id/conversionsInputUnitSpinner"
           android:layout_width="200dp"
           android:layout_height="wrap_content" android:layout_gravity="right"/>
       
        </TableRow>

         <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp">
           
           <EditText
           android:id="@+id/conversionspageOutput"
           android:layout_width="120dp"
           android:layout_height="wrap_content" android:text="@string/conversionspageOutput">

           <requestFocus />
       	   </EditText>
       	   
             <Spinner
           android:id="@+id/conversionsOutputUnitSpinner"
           android:layout_width="200dp"
           android:layout_height="wrap_content" android:layout_gravity="right"/>
       
        </TableRow>

         <Button
             android:id="@+id/conversionspageCalculate"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/conversionspageCalculate" android:layout_margin="15dp" android:textStyle="bold" android:textSize="25dp"/>

</LinearLayout>